[project]
name = "clock"
version = "0.1.0"
description = "Tools for timing"
authors = []
requires-python = ">=3.12"

dependencies = [
  "platformdirs>=4.5.0",
  "pydantic>=2.12.4",
  "pytz>=2025.2",
  "suntime>=1.3.2",
  "termcolor>=3.2.0",
  "typer>=0.20.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "codespell>=2.1.0,<3.0.0", "pyright>=1.1.235,<2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
clock = "clock.cli:app"

# Ruff configuration (replaces black, isort, flake8, and flake8-docstrings)
[tool.ruff]
line-length = 119
target-version = "py314"

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and docstring conventions (D)
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings  
  "F",   # Pyflakes
  "I",   # isort
  "D",   # pydocstyle (docstring conventions)
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces, rather than tabs
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line endings
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
# Use Google docstring convention
convention = "google"
